Added end date test cases (CR-2)

--- a/src/test/resources/log4j2.properties
+++ b/src/test/resources/log4j2.properties
@@ -2,21 +2,23 @@
 ###############################################################################
 # stdout logging
 ###############################################################################
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.Target=System.err
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-#log4j.appender.stdout.layout.ConversionPattern=%r [%-5p %C{1}] %m%n
-log4j.appender.stdout.layout.ConversionPattern=[%-5p %C{1}] %m%n
+
+appender.console.type = Console
+appender.console.name = STDOUT
+appender.console.layout.type = PatternLayout
+appender.console.layout.pattern = [%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
 
 ###############################################################################
 # file logging
 ###############################################################################
-#log4j.appender.file=org.apache.log4j.FileAppender
-#log4j.appender.file.File=log/main.log
-#log4j.appender.file.layout=org.apache.log4j.PatternLayout
-#log4j.appender.file.layout.ConversionPattern=%d{ABSOLUTE} %-5p %C{1}: %m%n
-#log4j.appender.file.Append=false
 
+#appender.file.type = File
+#appender.file.name = LOGFILE
+#appender.file.fileName=logs/log4j.log
+#appender.file.layout.type=PatternLayout
+#appender.file.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
+#appender.file.filter.threshold.type = ThresholdFilter
+#appender.file.filter.threshold.level = info
 
 ###############################################################################
 # Log levels
@@ -26,5 +28,4 @@ log4j.appender.stdout.layout.ConversionPattern=[%-5p %C{1}] %m%n
 # appenders are the output-targets defined above
 # loglevels: trace, debug, info, warn, error, fatal
 #
-#log4j.rootLogger=info, stdout, file
-log4j.rootLogger=info, stdout
+rootLogger=info, STDOUT
