--- a/pom.xml
+++ b/pom.xml
@@ -3,17 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>org.shacl.repairs</groupId>
     <artifactId>shacl-repairs</artifactId>
     <version>1.2.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-
     <properties>
         <eclipse.rdf4j.version>3.8.0-SNAPSHOT</eclipse.rdf4j.version>
         <junit.jupiter.version>5.9.2</junit.jupiter.version>
     </properties>
-
     <dependencies>
         <dependency>
             <groupId>org.eclipse.rdf4j</groupId>
@@ -50,7 +47,6 @@
             <version>2.22.0</version>
         </dependency>
     </dependencies>
-
     <repositories>
         <repository>
             <id>maven-central</id>
@@ -58,7 +54,6 @@
             <url>https://repo1.maven.org/maven2/</url>
         </repository>
     </repositories>
-
     <build>
         <plugins>
             <plugin>
@@ -81,6 +76,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.2</version>
+                <configuration>
+                    <includes>
+                        <include>**/*TestSuite.java</include>
+                    </includes>
+                </configuration>
                 <dependencies>
                     <dependency>
                         <groupId>org.junit.jupiter</groupId>
