--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.shacl.repairs</groupId>
     <artifactId>shacl-repairs</artifactId>
-    <version>1.1.0</version>
+    <version>1.2.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <properties>
         <eclipse.rdf4j.version>4.3.2-SNAPSHOT</eclipse.rdf4j.version>
